2.1.1
- PEAR::Validate inclusion was moved to P4A_Validate file
- ADODB was updated to 495
- scriptaculous was dropped
- jquery was added
- some XHTML validation bugs were fixed

2.1.0
- P4A_Data_Field::setSequence() method can handle null values to disable sequence on field
- the P4A helpers system was introduced (with P4A_Mask::useToolbar(),  P4A_Field::loadSelectByTable(), P4A_Mask::setTableAsSource() and P4A_Frame::anchorTabPane())
- P4A_Mark::setFocus() method now stores only the id of the focused object instead the object itself
- now P4A_Mark::setFocus() also works with AJAX requests

2.0.6
- P4A_Tab_Pane::nextPage() method was added
- P4A_Object::intercept() 3rd param (method) is now optional, if empty the method name will be equal to the action name
- some small changes to P4A_Tab_Pane were done
- a bug on the new P4A_DB_Source multivalue algorithm was solved (thanks to therealpecus)
- P4A_DB_Source::addMultivalueField() 2rd argument (table) is now optional, if empty it will be equal to the field name

2.0.5
- a new optimized algorithm for saving multivalue fields on db was implemented
- P4A_Dir_Source was added
- a hack to solve a mystic mysql bug was added (http://sourceforge.net/tracker/index.php?func=detail&aid=1666868&group_id=98294&atid=620566)
- a bug with P4A_DB_Source::setLimitQuery was solved

2.0.4
- some small optimizations were done on p4a_db adapter
- a small change was done on products_catologue sample

2.0.3
- a bug with mask's icon was fixed

2.0.2
- P4A_VERSION is now printed in the mask's footer

2.0.1
- a bug with mask's icon was fixed

2.0.0
- P4A_DB_Navigator now automatically call a redesign action

2.0.0-beta4
- a bug on P4A_DB_Source was solved (due to the porting to ADODB)
- P4A_Tab_Pane was nearly rewritten from scratch
- triggered events page on website (http://p4a.sf.net/triggered-events) was updated
- P4A_Frame::anchorCenter() now automatically adds a new row to the frame
- FCKEditor was updated to 2.4.1

2.0.0-beta3